title overflow fixed for mobiles

--- a/src/app/todo/todo-manager/todo-manager.component.css
+++ b/src/app/todo/todo-manager/todo-manager.component.css
@@ -5,3 +5,6 @@
 .btn-back-section .btn{
   float: right;
 }
+.todo-module-header{
+  overflow: hidden;
+}
